--- a/packages/rettangoli-ui/vt/specs/components/form/mixed-inputs-with-defaults.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/mixed-inputs-with-defaults.html
@@ -17,7 +17,11 @@ title: "Mixed Inputs With Defaults"
     salary: 8000,
     role: 'designer',
     volume: 75,
-    isActive: true
+    isActive: true,
+    anchor: {
+      x: 1,
+      y: 1,
+    }
   }
 
   form.form = {
@@ -89,6 +93,22 @@ title: "Mixed Inputs With Defaults"
       max: 100,
       step: 1,
       value: 75
+    }, {
+      name: 'anchor',
+      inputType: 'select',
+      label: 'Anchor',
+      description: 'This is an anchor field',
+      placeholder: 'Click here',
+      required: false,
+      options: [{
+        label: 'Top Left', value: { x: 0, y: 0 },
+      }, {
+        label: 'Top Right', value: { x: 1, y: 0 },
+      }, {
+        label: 'Bottom Left', value: { x: 0, y: 1 },
+      }, {
+        label: 'Bottom Right', value: { x: 1, y: 1 },
+      }],
     }],
     actions: {
       buttons: [{
