--- a/packages/rettangoli-ui/vt/specs/components/form/update-key.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/update-key.html
@@ -67,9 +67,9 @@ title: "Update Key"
       description: 'Dropdown selection',
       placeholder: 'Choose category',
       options: [
-        { id: '1', label: 'Option 1', value: 'option1' },
-        { id: '2', label: 'Option 2', value: 'option2' },
-        { id: '3', label: 'Option 3', value: 'option3' }
+        { label: 'Option 1', value: 'option1' },
+        { label: 'Option 2', value: 'option2' },
+        { label: 'Option 3', value: 'option3' }
       ]
     }, {
       name: 'color',
