add responsive breakpoints to view attributes

--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-hidden-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-hidden-01.html
@@ -4,6 +4,8 @@ title: Hidden
 <rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view d="h" bgc="mu" wh="100" >
     </rtgl-view>
-    <rtgl-view hidden d="h" bgc="mu" wh="100">
+    <rtgl-view hide d="h" bgc="mu" wh="100">
+    </rtgl-view>
+    <rtgl-view hide lg-show d="h" bgc="ac" wh="100">
     </rtgl-view>
 </rtgl-view>
