--- a/packages/rettangoli-ui/vt/specs/components/globalUi/globalUi-basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/globalUi/globalUi-basic.html
@@ -20,11 +20,32 @@ title: "Global UI - Basic"
 </rtgl-view>
 
 <script>
-  // Get globalUI from the component element
+  // Minimal Promise wrapper for the globalUI component
   const globalUIElement = document.querySelector('rtgl-global-ui');
+  
+  // Simple async wrapper that polls the returned state object
+  const waitForClose = (stateObj) => {
+    return new Promise((resolve) => {
+      const check = () => {
+        if (!stateObj.isOpen()) {
+          resolve(stateObj.getResult());
+        } else {
+          requestAnimationFrame(check);
+        }
+      };
+      requestAnimationFrame(check);
+    });
+  };
+
   const globalUI = {
-    showAlert: (options) => globalUIElement.transformedHandlers.showAlert(options),
-    showConfirm: (options) => globalUIElement.transformedHandlers.showConfirm(options)
+    showAlert: async (options) => {
+      const state = globalUIElement.transformedHandlers.showAlert(options);
+      return waitForClose(state);
+    },
+    showConfirm: async (options) => {
+      const state = globalUIElement.transformedHandlers.showConfirm(options);
+      return waitForClose(state);
+    }
   };
 
   const resultEl = document.getElementById('result');
