--- a/apps/rettangoli.dev/static/public/theme.css
+++ b/apps/rettangoli.dev/static/public/theme.css
@@ -225,3 +225,12 @@ code:not(pre code) {
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
 }
+
+.link{
+  text-decoration: none;
+  color: inherit;
+}
+
+.svg-icon{
+  display: block;
+}
