--- a/packages/rettangoli-ui/vt/specs/components/popover-input/popover-input-basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/popover-input/popover-input-basic.html
@@ -2,13 +2,11 @@
 title: Basic PopoverInput
 ---
 <rtgl-view id="container" g="lg" p="lg" wh="f" fw="w">
+  <rtgl-popover-input id="popover-input" label="Label" value="Click me to edit" placeholder="Enter text"></rtgl-popover-input>
 </rtgl-view>
 
 <script>
   const popoverInput = document.createElement('rtgl-popover-input');
-
-  popoverInput.setAttribute('label', 'Label')
-
   popoverInput.addEventListener('input-change', (e) => {
     console.log('Value changed:', e.detail);
   });
@@ -16,10 +14,4 @@ title: Basic PopoverInput
   popoverInput.addEventListener('temp-input-change', (e) => {
     console.log('Temporary value changed:', e.detail);
   });
-
-  popoverInput.value = 'Click me to edit';
-  popoverInput.placeholder = 'Enter text';
-
-  const container = document.getElementById('container');
-  container.appendChild(popoverInput);
 </script>
