--- a/packages/rettangoli-ui/vt/specs/components/slider-input/default-value.html
+++ b/packages/rettangoli-ui/vt/specs/components/slider-input/default-value.html
@@ -2,7 +2,7 @@
 title: "Default Value"
 ---
 <rtgl-view g="lg" fw="w" p="lg">
-  <rtgl-slider-input id="slider-input" defaultValue="20"></rtgl-slider-input>
+  <rtgl-slider-input id="slider-input" value="20"></rtgl-slider-input>
 </rtgl-view>
 
 <script>
